tests/invalid/inst_list_dup.err_exp
inst_list_dup.m:005: Warning: interface for module `inst_list_dup' does not
inst_list_dup.m:005:   export anything.
inst_list_dup.m:008: Error: syntax error in inst body at bound(((ground -
inst_list_dup.m:008:   unique) ; (ground - ground))).
For more information, recompile with `-E'.
